Add analyzer loading support for CoreCLR
Adds a new type, CoreClrAnalyzerAssemblyLoader, that is responsible
for finding and loading analyzer assemblies on CoreCLR. This is used
in the CscCore and VbcCore CoreCLR-targeting projects.

--- a/src/Compilers/CSharp/CscCore/CscCore.csproj
+++ b/src/Compilers/CSharp/CscCore/CscCore.csproj
@@ -67,8 +67,11 @@
     <Compile Include="..\..\Helpers\ConsoleUtil.cs">
       <Link>ConsoleUtil.cs</Link>
     </Compile>
-    <Compile Include="..\..\Helpers\NoOpAnalyzerAssemblyLoader.cs">
-      <Link>ConsoleUtil.cs</Link>
+    <Compile Include="..\..\Helpers\CoreClrAnalyzerAssemblyLoader.cs">
+      <Link>CoreClrAnalyzerAssemblyLoader.cs</Link>
+    </Compile>
+    <Compile Include="..\..\Helpers\AnalyzerAssemblyLoadUtils.cs">
+      <Link>AnalyzerAssemblyLoadUtils.cs</Link>
     </Compile>
     <Compile Include="Csc.cs" />
     <Compile Include="Program.cs" />
