--- a/src/Samples/VisualBasic/MakeConst/Test/MakeConstVB.UnitTests.vbproj
+++ b/src/Samples/VisualBasic/MakeConst/Test/MakeConstVB.UnitTests.vbproj
@@ -82,6 +82,7 @@
     <Compile Include="My Project\AssemblyInfo.vb" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="project.json" />
   </ItemGroup>
   <ImportGroup Label="Targets">
