--- a/src/Scripting/CSharpTest.Desktop/project.json
+++ b/src/Scripting/CSharpTest.Desktop/project.json
@@ -1,7 +1,7 @@
 ﻿{
   "dependencies": {
     "System.Diagnostics.Process": "4.0.0-beta-23123",
-    "xunit": "2.1.0-beta4-build3109",
+    "xunit": "2.1.0",
   },
   "frameworks": {
     "net46": {}
