--- a/src/Interactive/Features/InteractiveFeatures.csproj
+++ b/src/Interactive/Features/InteractiveFeatures.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Interactive\Core\HostObject\SearchPaths.cs" />
     <Compile Include="Interactive\Core\SerializableAssemblyLoadResult.cs" />
     <Compile Include="Interactive\Core\HostObject\SynchronizedVersionedList.cs" />
+    <Compile Include="Interactive\Core\NuGetPackageResolverImpl.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Interactive\Core\InteractiveHost.LazyRemoteService.cs" />
