Added test coverage for ProjectDesignerPageProviders

--- a/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.VisualBasic.VS.UnitTests/Microsoft.VisualStudio.ProjectSystem.VisualBasic.VS.UnitTests.csproj
+++ b/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.VisualBasic.VS.UnitTests/Microsoft.VisualStudio.ProjectSystem.VisualBasic.VS.UnitTests.csproj
@@ -156,6 +156,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ProjectSystem\Designers\VisualBasicProjectDesignerPageProproviderTests.cs" />
     <Compile Include="ProjectSystem\LanguageServices\VisualBasicCodeDomProviderTests.cs" />
   </ItemGroup>
   <ItemGroup>
