--- a/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.Managed.UnitTests/packages.config
+++ b/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.Managed.UnitTests/packages.config
@@ -7,6 +7,7 @@
   <package id="Microsoft.VisualStudio.SDK.VsixSuppression" version="14.0.50703" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Threading" version="14.0.50702" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Validation" version="14.0.50702" targetFramework="net46" />
+  <package id="Moq" version="4.2.1507.0118" targetFramework="net46" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net46" />
   <package id="xunit" version="2.1.0-beta4-build3109" targetFramework="net46" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net46" />
