--- a/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.VisualBasic.VS/Microsoft.VisualStudio.ProjectSystem.VisualBasic.VS.csproj
+++ b/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.VisualBasic.VS/Microsoft.VisualStudio.ProjectSystem.VisualBasic.VS.csproj
@@ -19,6 +19,7 @@
   </PropertyGroup>
   <ItemGroup>
     <InternalsVisibleToTest Include="Microsoft.VisualStudio.ProjectSystem.VisualBasic.VS.UnitTests" />
+    <InternalsVisibleToMoq Include="DynamicProxyGenAssembly2" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
