--- a/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.CSharp/Microsoft.VisualStudio.ProjectSystem.CSharp.csproj
+++ b/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.CSharp/Microsoft.VisualStudio.ProjectSystem.CSharp.csproj
@@ -21,6 +21,7 @@
     <InternalsVisibleTo Include="Microsoft.VisualStudio.ProjectSystem.CSharp.VS" />
     <InternalsVisibleToTest Include="Microsoft.VisualStudio.ProjectSystem.CSharp.UnitTests" />
     <InternalsVisibleToTest Include="Microsoft.VisualStudio.ProjectSystem.CSharp.VS.UnitTests" />
+    <InternalsVisibleToMoq Include="DynamicProxyGenAssembly2" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
