--- a/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.VisualBasic.UnitTests/Microsoft.VisualStudio.ProjectSystem.VisualBasic.UnitTests.csproj
+++ b/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.VisualBasic.UnitTests/Microsoft.VisualStudio.ProjectSystem.VisualBasic.UnitTests.csproj
@@ -153,6 +153,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="..\Microsoft.VisualStudio.ProjectSystem.Managed.UnitTests\App.config">
+      <Link>App.config</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="..\..\..\..\build\Targets\VSL.Imports.targets" />
