--- a/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.Managed.UnitTests/App.config
+++ b/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.Managed.UnitTests/App.config
@@ -2,5 +2,6 @@
 <configuration>
   <appSettings>
     <add key="xunit.methodDisplay" value="method"/>
+    <add key="xunit.shadowCopy" value="false"/>
   </appSettings>
 </configuration>
