--- a/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.CSharp/Microsoft.VisualStudio.ProjectSystem.CSharp.csproj
+++ b/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.CSharp/Microsoft.VisualStudio.ProjectSystem.CSharp.csproj
@@ -14,7 +14,7 @@
     <CreateVsixContainer>false</CreateVsixContainer>
     <DeployExtension>false</DeployExtension>
     <UseCodebase>true</UseCodebase>
-    <SignAssembly>false</SignAssembly>
+    <SignAssembly>true</SignAssembly>
     <OutDir>$(OutDir)\ProjectSystem\CSharp\</OutDir>
   </PropertyGroup>
   <ItemGroup>
